force-app/main/default/objects/Contact/fields/cv_transformer_id__c.field-meta.xml
<CustomField>
  <fullName>cv_transformer_id__c</fullName>
  <label>CV Transformer Candidate ID</label>
  <type>Text</type>
  <length>64</length>
</CustomField>