force-app/main/default/objects/Contact/fields/cvt_id__c.field-meta.xml
<CustomField>
  <fullName>cvt_id__c</fullName>
  <label>CV Transformer Candidate ID</label>
  <type>Text</type>
  <length>64</length>
</CustomField>