force-app/main/default/objects/Contact/fields/cvt_secret__c.field-meta.xml
<CustomField>
  <fullName>cvt_secret__c</fullName>
  <label>CV Transformer Secret for editing</label>
  <type>Text</type>
  <length>64</length>
</CustomField>